@@ -193,6 +193,14 @@ Sniffer *newSniffer(const DifxInput *D, int nComplex,
 	S->configId = -1;
 	S->nChan = D->nOutChan;
 	S->nTime = solInt/tMax;
+	if(S->nTime <= 1)
+	{
+		S->nTime = 1;
+		fprintf(stderr, "\nWarning: sniffer interval is not long "
+			"compared to integration time.\n");
+		fprintf(stderr, "Changing to %f seconds.\n\n",
+			tMax * S->nTime);
+	}
 	S->solInt = tMax * S->nTime;
 	
 	/* Open fringe fit file */
